# ecg-federated-ae

./: .gitignore  README.md  diagnose_report.txt  plot_bar.py  pyproject.toml  requirements.txt
configs/: ae_config.py  vae_config.py
evaluation/: __init__.py  anomaly_scorer.py  compute_cost.py  metrics.py  plotting.py  statistical_tests.py
fl/: flower_client.py  flower_server.py  model_factory.py  results_plots.py  strategies.py
models/: __init__.py  base.py  conv_ae.py  vae.py  vanilla_ae.py
privacy/: dp_sgd.py
quantisation/: plot_edge_comparison.py  plot_roc_and_pareto.py  ptq.py
scripts/: convae_ablation.py  diagnose_data.py  extract_subclass_labels.py  fix_normalization.py  partition_clients.py  preprocess_ptbxl.py  preprocess_raw.py  res_conv_ae.py  resconvae_max_auroc.py  run_evaluation.py  run_federated.py  run_perclass_breakdown.py  run_vae_ablation.py  run_vae_baseline.py  train_baseline.py  validate_data.py  validate_labels.py
tests/: test_smoke.py  test_vae.py
training/: ablation_bottleneck.py  ablation_depth.py  ablation_perClass.py  train_ae.py  train_vae.py
utils/: __init__.py  csv_logger.py  dataset.py  reproducibility.py
