[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-federated-ae"
version = "0.1.0"
description = "Privacy-Preserving Federated Autoencoder for ECG Anomaly Detection on Edge Devices"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
fl = ["flwr[simulation]>=1.5.0"]
dp = ["opacus>=1.4.0"]
quant = ["onnxruntime>=1.15.0"]
edge = ["ptflops>=0.7.0"]
dev = ["pytest>=7.0.0", "pytest-cov"]
all = ["ecg-federated-ae[fl,dp,quant,edge,dev]"]

[tool.setuptools.packages.find]
include = [
    "configs*", "models*", "training*", "evaluation*",
    "fl*", "quantisation*", "privacy*", "utils*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
